# TerrariaClone

./: .gitignore  Cargo.toml  README.md
assets/languages/: en_US.json
assets/shaders/: light_map.wgsl  lighting.wgsl  map_view.wgsl  mouse_light.wgsl  post_processing.wgsl  screen_vertex.wgsl  shadow_map.wgsl  sky.wgsl  sun.wgsl  tile_material.wgsl  tile_shader.wgsl
assets/shaders/light_map/: blur.wgsl  light_sources.wgsl  scan.wgsl
sprites/: Player_Left_Arm.aseprite
src/: block.rs  item.rs  lens.rs  lib.rs  lighting.rs  main.rs  rect.rs  state.rs  util.rs  wall.rs  world_generator.rs
src/animation/: lens.rs  mod.rs  plugin.rs  tweenable.rs
src/common/: components.rs  conditions.rs  extensions.rs  gradient.rs  helpers.rs  lens.rs  math.rs  mod.rs  rect.rs  state.rs  systems.rs
src/items/: axe.rs  block.rs  item.rs  mod.rs  pickaxe.rs  seed.rs  tool.rs  wall.rs
src/language/: keys.rs  mod.rs  plugin.rs
src/lighting/: compositing.rs  constants.rs  extract.rs  gpu_types.rs  lightmap_pipeline.rs  mod.rs  pipeline.rs  pipeline_assets.rs  postprocess_pipeline.rs  resource.rs  types.rs  types_gpu.rs
src/lighting/lightmap/: assets.rs  mod.rs  pipeline.rs
src/lighting/postprocess/: assets.rs  mod.rs  pipeline.rs
src/lighting/shaders/: attenuation.wgsl  camera.wgsl  gi_attenuation.wgsl  gi_camera.wgsl  gi_halton.wgsl  gi_math.wgsl  gi_raymarch.wgsl  gi_types.wgsl  halton.wgsl  math.wgsl  types.wgsl
src/parallax/: layer.rs  mod.rs
src/plugins/: assets.rs  background.rs  camera.rs  cursor.rs  debug.rs  debug_plugin.rs  fps.rs  fps_plugin.rs  inventory.rs  main.rs  menu.rs  mod.rs  player.rs  player_plugin.rs  settings.rs  setup.rs  setup_plugin.rs  slider.rs  ui.rs  ui_plugin.rs  world.rs  world_plugin.rs
src/plugins/audio/: components.rs  events.rs  mod.rs  systems.rs
src/plugins/background/: mod.rs  sun_and_moon.rs  systems.rs
src/plugins/camera/: components.rs  events.rs  lighting.rs  mod.rs  resources.rs  systems.rs
src/plugins/config/: mod.rs  resources.rs
src/plugins/cursor/: components.rs  events.rs  mod.rs  position.rs  resources.rs  systems.rs
src/plugins/debug/: components.rs  gui.rs  mod.rs  resources.rs  systems.rs
src/plugins/entity/: components.rs  mod.rs
src/plugins/fps/: components.rs  mod.rs  resources.rs  systems.rs
src/plugins/inventory/: components.rs  events.rs  mod.rs  resources.rs  systems.rs  util.rs
src/plugins/item/: components.rs  mod.rs  systems.rs
src/plugins/menu/: builders.rs  celestial_body.rs  components.rs  mod.rs  role.rs  sun.rs  systems.rs
src/plugins/menu/settings/: mod.rs
src/plugins/menu/settings/interface/: mod.rs
src/plugins/menu/settings/language/: mod.rs
src/plugins/menu/settings/video/: mod.rs
src/plugins/menu/settings/volume/: mod.rs
src/plugins/particles/: components.rs  mod.rs  systems.rs
src/plugins/player/: body_sprites.rs  components.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/plugins/settings/: components.rs  mod.rs  resources.rs  systems.rs
src/plugins/settings_menu/: buttons.rs  mod.rs
src/plugins/settings_menu/interface/: buttons.rs  mod.rs
src/plugins/settings_menu/video/: buttons.rs  mod.rs
src/plugins/ui/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/plugins/ui/fps/: mod.rs
src/plugins/ui/ingame/: mod.rs
src/plugins/ui/inventory/: components.rs  mod.rs  systems.rs
src/plugins/ui/menu/: builders.rs  celestial_body.rs  components.rs  events.rs  mod.rs
src/plugins/world/: block.rs  chunk.rs  components.rs  constants.rs  events.rs  generator.rs  light.rs  mod.rs  resources.rs  systems.rs  time.rs  tree.rs  utils.rs  wall.rs  world.rs
src/plugins/world_map_view/: mod.rs  systems.rs
src/world/: block.rs  chunk.rs  generator.rs  light.rs  mod.rs  tree.rs  wall.rs
src/world/save_as/: mod.rs  terraria_world.rs
(+16 files in other folders)
