[package]
name = "game"
version = "0.1.0"
edition = "2021"
authors = ["st0rmbtw"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.15.0", features = ["2d"] }
lazy_static = "1.4.0"
rand = "0.8.5"
interpolation = "0.2.0"
ndarray = "0.15.6"
simdnoise = "3.1.6"
autodefault = "2.0.0"
bevy_hanabi = { version = "0.6.0", default-features = false, features = ["2d"] }
bevy-inspector-egui = { version = "0.18.0", optional = true }
bevy_prototype_debug_lines = { version = "0.10.1", optional = true }
bevy_ecs_tilemap = { git = "https://github.com/geieredgar/bevy_ecs_tilemap/", branch = "bevy_track" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.24", features = ["derive"] }

[profile.dev]
opt-level = 0
incremental=false

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["dep:bevy_prototype_debug_lines", "dep:bevy-inspector-egui"]