[package]
name = "game"
version = "0.1.0"
edition = "2021"
authors = ["st0rmbtw"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
bevy-inspector-egui = { version = "0.18", optional = true }
bevy_prototype_debug_lines = { version = "0.10.1", optional = true }
bevy_hanabi = { version = "0.6", default-features = false, features = ["2d"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main" }
rand = "0.8.5"
interpolation = "0.2.0"
ndarray = "0.15.6"
simdnoise = "3.1.6"
noise = "0.8.2"
autodefault = "2.0.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
image = { version = "0.24.5", optional = true }

[profile.dev]
opt-level = 0
incremental=true

[profile.release]
opt-level = 3
lto = false

[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["dep:bevy_prototype_debug_lines", "dep:bevy-inspector-egui"]
world_image = ["dep:image"]
