[package]
name = "game"
version = "0.1.0"
edition = "2021"
authors = ["st0rmbtw"]

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_gizmos",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "filesystem_watcher",
    "dynamic_linking", 
    "wav", 
    "mp3"
] }
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy-inspector-egui = { version = "0.19", optional = true }
bevy_hanabi = { version = "0.7", default-features = false, features = ["2d"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
rand = "0.8.5"
interpolation = "0.3.0"
ndarray = "0.15.6"
simdnoise = "3.1.6"
noise = "0.8.2"
autodefault = "2.0.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
image = { version = "0.24.7", optional = true }
rayon = "1.7.0"

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.11.2"
default-features = false
features = ["x11"]

[profile.dev]
opt-level = 0
incremental=true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = false

[profile.release.package."*"]
opt-level = 3

[features]
debug = ["dep:bevy-inspector-egui"]
world_image = ["dep:image"]
terraria_world = []
